rnsc/test_data/rns_integration/error/parser/instructions/byte_operand_overflow.rns
.class ByteOperandOverflow
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    bipush 256
    return
  .code_end
.method_end
.class_end
